--- a/architecture/build.gradle
+++ b/architecture/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.35.1"
     kapt "com.google.dagger:hilt-android-compiler:2.35.1"
 
+    implementation "com.squareup.okhttp3:okhttp:4.9.1"
 
     testImplementation 'junit:junit:4.+'
 
