--- a/architecture/build.gradle
+++ b/architecture/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.35.1"
     kapt "com.google.dagger:hilt-android-compiler:2.35.1"
 
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha03'
+
     implementation "com.squareup.okhttp3:okhttp:4.9.1"
 
     testImplementation 'junit:junit:4.+'
