--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,4 @@ include ':Lib_User_Service'
 include ':architecture'
 include ':app'
 rootProject.name = "app_architecture"
-include ':Container'
+include ':Provider'
