--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ include ':architecture'
 include ':app'
 rootProject.name = "app_architecture"
 include ':Provider'
+includeBuild("plugin/plugin_version")
