--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 import com.qiyei.android.plugin.*
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion BuildTools.compileSdkVersion
+    buildToolsVersion BuildTools.buildToolsVersion
 
     defaultConfig {
         applicationId "com.qiyei.android.architecture"
-        minSdkVersion 23
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion BuildTools.minSdkVersion
+        targetSdkVersion BuildTools.targetSdkVersion
+        versionCode BuildTools.versionCode
+        versionName BuildTools.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
