--- a/architecture/build.gradle
+++ b/architecture/build.gradle
@@ -1,14 +1,14 @@
 import com.qiyei.android.plugin.*
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion BuildTools.compileSdkVersion
+    buildToolsVersion BuildTools.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 23
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion BuildTools.minSdkVersion
+        targetSdkVersion BuildTools.targetSdkVersion
+        versionCode BuildTools.versionCode
+        versionName BuildTools.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
