--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.App_architecture">
-        <activity android:name=".ui.activity.HiltDemoActivity"></activity>
+        <activity
+            android:name=".ui.activity.ServiceLoaderDemoActivity"
+            android:exported="true" />
+        <activity android:name=".ui.activity.HiltDemoActivity" />
         <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
