--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
+    implementation "io.insert-koin:koin-android:$koin_version"
+
     implementation project(":architecture")
 
     implementation "com.google.dagger:hilt-android:2.35.1"
